docs/api/qiskit/0.19/qiskit.ignis.verification.process_tomography_circuits.md
---
title: process_tomography_circuits
description: API reference for qiskit.ignis.verification.process_tomography_circuits
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.ignis.verification.process_tomography_circuits
---

# process\_tomography\_circuits

<span id="qiskit.ignis.verification.process_tomography_circuits" />

`process_tomography_circuits(circuit, measured_qubits, prepared_qubits=None, meas_labels='Pauli', meas_basis='Pauli', prep_labels='Pauli', prep_basis='Pauli')`[GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.3/qiskit/ignis/verification/tomography/basis/circuits.py "view source code")

Return a list of quantum process tomography circuits.

## This performs preparation in the minimial Pauli-basis eigenstates

*   `"Z_p"`: $\vert 0\rangle$
*   `"Z_m"`: $\vert 1\rangle$
*   `"X_p"`: $\vert +\rangle$
*   `"Y_m"`: $\vert +i\rangle$

on each qubit, and measurement in the Pauli-basis X, Y, Z resulting in $4^n 3^n$ circuits for an n-qubit process tomography experiment.

**Parameters**

*   **circuit** ([`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")) – the QuantumCircuit circuit to be tomographed.
*   **measured\_qubits** ([`QuantumRegister`](qiskit.circuit.QuantumRegister "qiskit.circuit.quantumregister.QuantumRegister")) – the qubits to be measured. This can also be a list of whole QuantumRegisters or individual QuantumRegister qubit tuples.
*   **prepared\_qubits** (`Optional`\[[`QuantumRegister`](qiskit.circuit.QuantumRegister "qiskit.circuit.quantumregister.QuantumRegister")]) – the qubits to have state preparation applied, if different from measured\_qubits. If None measured\_qubits will be used for prepared qubits
*   **meas\_labels** (`Union`\[`str`, `Tuple`\[`str`], `List`\[`Tuple`\[`str`]]]) – (default: ‘Pauli’) The measurement operator labels.
*   **meas\_basis** (`Union`\[`str`, `TomographyBasis`]) – (default: ‘Pauli’) The measurement basis.
*   **prep\_labels** (`Union`\[`str`, `Tuple`\[`str`], `List`\[`Tuple`\[`str`]]]) – (default: ‘Pauli’) The preparation operator labels.
*   **prep\_basis** (`Union`\[`str`, `TomographyBasis`]) – (default: ‘Pauli’) The preparation basis.

**Return type**

`List`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")]

**Returns**

A list of QuantumCircuit objects containing the original circuit with state preparation circuits prepended, and measurement circuits appended.

The returned circuits are named by the preparation and measurement basis.

